# video_uploader

./: .dockerignore  .env.example  .gitignore  CONCLUSION.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
k8s/: Chart.yaml  example.values.yaml
k8s/templates/configs/: backend.yaml  broker.yaml
k8s/templates/deployments/: backend.yaml  beat.yaml  broker.yaml  db.yaml  worker.yaml
k8s/templates/secrets/: aws.yaml  backend.yaml  broker.yaml
k8s/templates/services/: backend.yaml  broker.yaml  db.yaml
scripts/: db_init.sql
src/: .env.example  __init__.py  celery_app.py  requirements.txt  urls.py
src/apps/users/migrations/: 0001_initial.py
src/apps/videos/: __init__.py  admin.py  apps.py  choices.py  forms.py  models.py  tasks.py  views.py
src/apps/videos/migrations/: 0001_initial.py  0002_auto_20210318_1907.py
src/settings/: __init__.py
src/settings/base/: apps.py  aws.py  celery.py  common.py  db.py  env.py  i18n.py  logging.py  middleware.py  root.py  security.py  static.py  templates.py  toolbar.py
src/templates/: index.html
src/utils/: aws.py  middlewares.py  models.py  storages.py  validators.py
