[tool.poetry]
name = "video_uploader"
version = "0.0.1"
description = ""
authors = ["k0t3n <k0t3n.mail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
django-debug-toolbar = "^3.2"
django-split-settings = "^1.0.1"
django-environ = "^0.4.5"
mysqlclient = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
